php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #6000 Error reading datetime field
Submitted: 2000-08-07 04:46 UTC Modified: 2000-10-20 16:47 UTC
From: gandini at popnet dot it Assigned:
Status: Closed Package: MSSQL related
PHP Version: 4.0.1pl2 OS: WIN NT 4.0
Private report: No CVE-ID: None
 [2000-08-07 04:46 UTC] gandini at popnet dot it
I'm using PHP 4.0.1pl2 (win32 binary downloaded from php)with IIS4, SQL 7.0 on NT 4.0 sp6a.
In php.ini I use just "extension=php_mssql70.dll".

When I try to select a "datetime" field in a record, the result is a truncated date like "Jul 26 2".
The same code works with php3.0.16 and returns "Jul 26 2000 2:32PM".


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2000-10-20 16:47 UTC] fmk@php.net
This is fixed in CVS. The fix will be available in php 4.0.4

- Frank
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 22:00:02 2026 UTC