Fixing bug #6000 Return the full content for datetime colums

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@34255 c90b9560-bf6c-de11-be94-00142212c4b1